--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.19",
     "@types/react": "^17.0.16",
+    "@types/react-copy-to-clipboard": "^5.0.3",
     "@types/react-dom": "^17.0.9",
     "@types/styled-components": "^5.1.12",
+    "axios": "^0.27.2",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
